Fix z-index, preventing mouse interactions with the content

--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -12,12 +12,11 @@
 .h5p-digibook-chapter {
   max-width: 1000px;
   transition: 0.25s;
-  z-index: -1; }
+  z-index: 1; }
 
 .h5p-digibook-content {
   position: relative;
-  transition: 1s;
-  z-index: -1; }
+  transition: 1s; }
 
 .h5p-digibook-animate-new {
   position: absolute;
@@ -167,7 +166,8 @@
   flex: 0 0 16em;
   order: -1;
   transition: all .5s ease-in-out;
-  width: 16.563em; }
+  width: 16.563em;
+  z-index: 2; }
   .h5p-digibook-navigation > a {
     font-weight: bold; }
   .h5p-digibook-navigation > div {
