--- a/src/styles/scss/_navigationbar.scss
+++ b/src/styles/scss/_navigationbar.scss
@@ -6,6 +6,7 @@
     order: -1;
     transition: all .5s ease-in-out;
     width: 16.563em;
+    z-index: 2;
     >a {
         font-weight: bold;
     }
