--- a/src/styles/scss/_pagecontent.scss
+++ b/src/styles/scss/_pagecontent.scss
@@ -1,14 +1,12 @@
 .h5p-digibook-chapter {
   max-width: 1000px;
   transition: 0.25s;
-  z-index: -1;
-
+  z-index: 1;
   }
 
 .h5p-digibook-content{
   position: relative;
   transition: 1s;
-  z-index: -1;
 
 }
 
